[package]
name = "zam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "gzip", "deflate"] }
tokio = { version = "1", features = ["full"] }
clap = "~2.33"
regex = "1"
colored = "*"
serde = "1.0.133"
serde_json = "1.0.74"
